k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shadecn-learning
  namespace: dev
spec:
  selector:
    app: shadecn-learning
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
